# seegloc

./: .gitignore  README.md  autolabel_electrodes.py  coregister_ctmri.sh  coregister_ctmri_renderimages.sh  debug_electrodes.py  fuzzyquery_aal.py  pv_plotter.py  pyproject.toml  requirements.txt  test_mriplot.py  test_plot.py  vis_coordinates_to_nifti.py  visual_test.py
seegloc/: __init__.py  autolabel.py  coreg.py  extrapolate.py  fsleyes_cli.py  fuzzyquery_aal.py  pv_plotter.py  view3d.py
seegloc/atlases/: 1020_positions.csv  HCP-MMP1_cortices.xml  HCP-MMP1_cortices_1mm.nii.txt
