[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
seegloc = ["seegloc/atlases/*"]

[project]
name = "seegloc"
authors = [
    {name = "Simeon Wong", email = "simeon.wong@sickkids.ca"},
    {name = "George Ibrahim", email = "george.ibrahim@sickkids.ca"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "MIT"}
dependencies = [
    "fslpy",
    "scikit-image",
    "pandas",
    "numpy",
    "pyvista",
    "nibabel",
    "imageio-ffmpeg",
    "tqdm",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.scripts]
seegloc_autolabel = "seegloc.autolabel:main"
seegloc_extrapolate = "seegloc.extrapolate:main"
seegloc_coreg = "seegloc.coreg:pipeline_full"
seegloc_genqc = "seegloc.coreg:pipeline_qconly"
